# heatpumps

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
docs/: conf.py  index.rst  landing_page.rst  references.bib  z_literature.rst
docs/_misc/: under_development.rst
docs/_static/css/: custom.css
docs/development/: content.rst  instructions.rst
docs/documentation/: API.rst  methodology.rst  whats_new.rst
docs/galary/: applications.rst  publications.rst
docs/getting_started/: dashboard.rst  installation.rst  model_classes.rst
locales/: dashboard.pot  variables.pot
locales/de/LC_MESSAGES/: dashboard.mo  dashboard.po  variables.mo  variables.po
scripts/: collect_component_labels.py
src/heatpumps/: __init__.py  heatpump.py  hp_dashboard.py  parameters.py  run_dashboard.py  simulation.py  variables.py
src/heatpumps/models/: HeatPumpBase.py  HeatPumpCascade.py  HeatPumpCascade2IHX.py  HeatPumpCascade2IHXTrans.py  HeatPumpCascadeBase.py  HeatPumpCascadeEcon.py  HeatPumpCascadeEconIHX.py  HeatPumpCascadeEconIHXTrans.py  HeatPumpCascadeEconTrans.py  HeatPumpCascadeFlash.py  HeatPumpCascadeFlashTrans.py  HeatPumpCascadeIC.py  HeatPumpCascadeICTrans.py  HeatPumpCascadeIHXEcon.py  HeatPumpCascadeIHXEconTrans.py  HeatPumpCascadeIHXPC.py  HeatPumpCascadeIHXPCIHX.py  HeatPumpCascadeIHXPCIHXTrans.py  HeatPumpCascadeIHXPCTrans.py  HeatPumpCascadePC.py  HeatPumpCascadePCIHX.py  HeatPumpCascadePCIHXTrans.py  HeatPumpCascadePCTrans.py  HeatPumpCascadeTrans.py  HeatPumpEcon.py  HeatPumpEconIHX.py  HeatPumpEconIHXTrans.py  HeatPumpEconTrans.py  HeatPumpFlash.py  HeatPumpFlashTrans.py  HeatPumpIC.py  HeatPumpICTrans.py  HeatPumpIHX.py  HeatPumpIHXEcon.py  HeatPumpIHXEconTrans.py  HeatPumpIHXPC.py  HeatPumpIHXPCIHX.py  HeatPumpIHXPCIHXTrans.py  HeatPumpIHXPCTrans.py  HeatPumpIHXTrans.py  (+10 more)
src/heatpumps/models/input/: CEPCI.json  params_hp_cascade.json  params_hp_cascade_2ihx.json  params_hp_cascade_2ihx_trans.json  params_hp_cascade_econ_closed.json  params_hp_cascade_econ_closed_ihx.json  params_hp_cascade_econ_closed_ihx_trans.json  params_hp_cascade_econ_closed_trans.json  params_hp_cascade_econ_open.json  params_hp_cascade_econ_open_ihx.json  params_hp_cascade_econ_open_ihx_trans.json  params_hp_cascade_econ_open_trans.json  params_hp_cascade_flash.json  params_hp_cascade_flash_trans.json  params_hp_cascade_ic.json  params_hp_cascade_ic_trans.json  params_hp_cascade_ihx_econ_closed.json  params_hp_cascade_ihx_econ_closed_trans.json  params_hp_cascade_ihx_econ_open.json  params_hp_cascade_ihx_econ_open_trans.json  (+56 more)
src/heatpumps/src/: parameter.json  parameter_dual.json  refrigerants.json  state_diagram_config.json
src/heatpumps/static/: refrigerants.json  translations.json
tests/: export_model_results.py  test_models.py  test_refrigerant_compatibility.py
