[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "heatpumps"
description = "Collection of TESPy heat pump models and additional Streamlit dashboard."
version = "1.4.0rc4"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "!=3.9.7, >=3.9"
authors = [
    { name = "Jonas Freißmann", email = "jonas.freissmann@web.de" },
    { name = "Malte Fritz", email = "malte.fritz@web.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "coolprop>=6.4.1",
    "darkdetect>=0.8.0",
    "fluprodia==3.3",
    "matplotlib>=3.6.3",
    "numpy>=1.24.0",
    "pandas>=1.5.3",
    "platformdirs>=4.0.0",
    "plotly>=5.20.0",
    "scikit-learn>=1.2.1",
    "scipy>=1.10.0",
    "streamlit>=1.47.0,<2.0.0",
    "tespy>=0.8.0,<0.9.0"
]

[project.optional-dependencies]
dev = [
    "build",
    "flit",
    "furo",
    "pytest",
    "sphinx>=7.2.2",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib.bibtex",
]

[project.scripts]
heatpumps-dashboard = "heatpumps.run_dashboard:main"

[project.urls]
Homepage = "https://github.com/jfreissmann/heatpumps"
Repository = "https://github.com/jfreissmann/heatpumps"
Issues = "https://github.com/jfreissmann/heatpumps/issues"
Documentation = "https://heatpumps.readthedocs.io/"

[tool.flit.sdist]
include = [
    'static/*',
    'static/img/*',
    'static/img/topologies/*',
    'models/input/*'
]
exclude = [
    "docs/_build"
]
